--- a/Heart Attack Predictions - DT, LR, KNN.ipynb
+++ b/Heart Attack Predictions - DT, LR, KNN.ipynb
@@ -13,9 +13,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5dabeaf8",
+   "metadata": {},
+   "source": [
+    "## Key\n",
+    "\n",
+    "__Age__ : Age of the patient\n",
+    "\n",
+    "__Sex__ : Sex of the patient\n",
+    "\n",
+    "__exang__: exercise induced angina (1 = yes; 0 = no)\n",
+    "\n",
+    "__ca__: number of major vessels (0-3)\n",
+    "\n",
+    "__cp__: Chest Pain type chest pain type\n",
+    "\n",
+    "__Value 1__: typical angina\n",
+    "__Value 2__: atypical angina\n",
+    "__Value 3__: non-anginal pain\n",
+    "__Value 4__: asymptomatic\n",
+    "__trtbps__: resting blood pressure (in mm Hg)\n",
+    "\n",
+    "__chol__: cholestoral in mg/dl fetched via BMI sensor\n",
+    "\n",
+    "__fbs__: (fasting blood sugar > 120 mg/dl) (1 = true; 0 = false)\n",
+    "\n",
+    "__rest_ecg__: resting electrocardiographic results\n",
+    "\n",
+    "__Value 0__: normal\n",
+    "__Value 1__: having ST-T wave abnormality (T wave inversions and/or ST elevation or depression of > 0.05 mV)\n",
+    "__Value 2__: showing probable or definite left ventricular hypertrophy by Estes' criteria\n",
+    "__thalach__: maximum heart rate achieved\n",
+    "\n",
+    "__target__: 0= less chance of heart attack 1= more chance of heart attack"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33a48384",
+   "id": "dd4d17df",
    "metadata": {},
    "outputs": [],
    "source": []
