classifier decision tree

--- a/Heart Attack Predictions - DT, LR, KNN.ipynb
+++ b/Heart Attack Predictions - DT, LR, KNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d0974345",
+   "id": "6798799a",
    "metadata": {},
    "source": [
     "# Finding the Best Algorithm to Predict Heart Attacks\n",
@@ -17,7 +17,7 @@
    "source": [
     "## Project Goal:\n",
     "\n",
-    "The Heart Attack Analysis & Prediction Dataset by RASHIK RAHMAN on Kaggle provides a vital dataset on medical information for patients with low and high chances of heart attack. By analyzing the learning algorithms, Decision Trees (DT), Logistic Regression (LR), and k-Nearest Neighbors (KNN), we can develop a predictive model that determines the best algorithm for this dataset."
+    "The Heart Attack Analysis & Prediction Dataset by RASHIK RAHMAN on Kaggle provides a vital dataset on medical information for patients with low and high chances of heart attack. By analyzing the learning algorithms, Decision Trees (DT), Logistic Regression (LR), and k-Nearest Neighbors (KNN), we can develop a predictive model that determines the best algorithm for this dataset. This project was inspired by TANAYA TIPRE's analysis on the same dataset, and can be found on Kaggle under Heart Attack Prediction - LR, SVM, KNN, DT. "
    ]
   },
   {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0b43321",
+   "id": "b53dcbcc",
    "metadata": {},
    "source": [
     "## Importing Libraries"
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "a9befdd5",
+   "id": "27dbfae9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6f93e9e",
+   "id": "897e0c58",
    "metadata": {},
    "source": [
     "## Data Validation"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "ed81e59b",
+   "id": "a9729900",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "734046be",
+   "id": "8dd80507",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93566e94",
+   "id": "1343012b",
    "metadata": {},
    "source": [
     "Data Cleansing"
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "ad632c8d",
+   "id": "4fdb2dcf",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "fd81ea88",
+   "id": "f9ba5372",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e774a5d8",
+   "id": "0defbd0e",
    "metadata": {},
    "source": [
     "Creates training and testing splits"
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "89d89e28",
+   "id": "308f53dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1bb9345",
+   "id": "bc5577b7",
    "metadata": {},
    "source": [
     "## Logistic Regression"
@@ -753,16 +753,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "55b7ae94",
+   "execution_count": 43,
+   "id": "c4c3a838",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Confusion Matrix:\n",
-      " [[23  5]\n",
+      "Confusion Matrix: \n",
+      "\n",
+      "[[23  5]\n",
       " [ 3 30]]\n",
       "\n",
       "Logistic Regression model accuracy: 86.89%\n"
@@ -777,19 +778,70 @@
     "predictions = logistic_model.predict(X_test) # predicts the target values for test\n",
     "\n",
     "conf_matrix = confusion_matrix(y_test, predictions) # calculates confusion matrix\n",
-    "print(\"Confusion Matrix:\\n\", conf_matrix)\n",
+    "print(\"Confusion Matrix: \\n\")\n",
+    "print(conf_matrix)\n",
     "\n",
     "test_accuracy = accuracy_score(y_test, predictions) * 100 # calculates test accuracy\n",
     "print(f\"\\nLogistic Regression model accuracy: {test_accuracy:.2f}%\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6687cce8",
+   "cell_type": "markdown",
+   "id": "2de56726",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Classifier Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "6dc841a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix: \n",
+      "\n",
+      "[[22  6]\n",
+      " [ 6 27]]\n",
+      "\n",
+      "The test accuracy of the K-Neighbors Classifier is: 80.33%\n",
+      "\n",
+      "Classification Report: \n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.79      0.79      0.79        28\n",
+      "           1       0.82      0.82      0.82        33\n",
+      "\n",
+      "    accuracy                           0.80        61\n",
+      "   macro avg       0.80      0.80      0.80        61\n",
+      "weighted avg       0.80      0.80      0.80        61\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn_classifier = KNeighborsClassifier(n_neighbors=10) # instantiates k-neighbors classifer with 10 neighbors\n",
+    "\n",
+    "knn_classifier.fit(X_train, y_train.values.ravel())# fits the model with the training data\n",
+    "\n",
+    "knn_predictions = knn_classifier.predict(X_test) # predicts the testing data\n",
+    "\n",
+    "knn_confusion_matrix = confusion_matrix(y_test, knn_predictions) # generates and displays the confusion matrix\n",
+    "\n",
+    "print(\"Confusion Matrix: \\n\")\n",
+    "print(knn_confusion_matrix)\n",
+    "\n",
+    "knn_test_accuracy = accuracy_score(y_test, knn_predictions) * 100 # calculates the test accuracy\n",
+    "print(f\"\\nThe test accuracy of the K-Neighbors Classifier is: {knn_test_accuracy:.2f}%\\n\") # displays the test accuracy\n",
+    "\n",
+    "print(\"Classification Report: \\n\")\n",
+    "print(classification_report(y_test, knn_predictions)) # prints the classification report for precision, recall, f1-score, and accuracy"
+   ]
   }
  ],
  "metadata": {
