restructured code blocks

--- a/Heart Attack Predictions - DT, LR, KNN.ipynb
+++ b/Heart Attack Predictions - DT, LR, KNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6798799a",
+   "id": "84b75666",
    "metadata": {},
    "source": [
     "# Finding the Best Algorithm to Predict Heart Attacks\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b53dcbcc",
+   "id": "323ec61b",
    "metadata": {},
    "source": [
     "## Importing Libraries"
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "27dbfae9",
+   "id": "4df02448",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "897e0c58",
+   "id": "3411c3e7",
    "metadata": {},
    "source": [
     "## Data Validation"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a9729900",
+   "id": "4705513b",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "8dd80507",
+   "id": "bdd28a6e",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1343012b",
+   "id": "1470d6b2",
    "metadata": {},
    "source": [
     "Data Cleansing"
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "4fdb2dcf",
+   "id": "7fcec1d9",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "f9ba5372",
+   "id": "fbcbda9f",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0defbd0e",
+   "id": "c1b120c7",
    "metadata": {},
    "source": [
     "Creates training and testing splits"
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "308f53dc",
+   "id": "b973f957",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,58 +745,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc5577b7",
-   "metadata": {},
-   "source": [
-    "## Logistic Regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "c4c3a838",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Confusion Matrix: \n",
-      "\n",
-      "[[23  5]\n",
-      " [ 3 30]]\n",
-      "\n",
-      "Logistic Regression model accuracy: 86.89%\n"
-     ]
-    }
-   ],
-   "source": [
-    "logistic_model = LogisticRegression() # instantiates the logistic regression model\n",
-    "\n",
-    "logistic_model.fit(X_train, y_train.values.ravel()) # fits the model to the training data\n",
-    "\n",
-    "predictions = logistic_model.predict(X_test) # predicts the target values for test\n",
-    "\n",
-    "conf_matrix = confusion_matrix(y_test, predictions) # calculates confusion matrix\n",
-    "print(\"Confusion Matrix: \\n\")\n",
-    "print(conf_matrix)\n",
-    "\n",
-    "test_accuracy = accuracy_score(y_test, predictions) * 100 # calculates test accuracy\n",
-    "print(f\"\\nLogistic Regression model accuracy: {test_accuracy:.2f}%\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2de56726",
+   "id": "c1138fa8",
    "metadata": {},
    "source": [
     "## Classifier Decision Tree"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a5735a5a",
+   "metadata": {},
+   "source": [
+    "## K-Nearest Neighbors Classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "6dc841a6",
+   "id": "b8666226",
    "metadata": {},
    "outputs": [
     {
@@ -841,6 +807,48 @@
     "\n",
     "print(\"Classification Report: \\n\")\n",
     "print(classification_report(y_test, knn_predictions)) # prints the classification report for precision, recall, f1-score, and accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c20195c6",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "1496c302",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix: \n",
+      "\n",
+      "[[23  5]\n",
+      " [ 3 30]]\n",
+      "\n",
+      "Logistic Regression model accuracy: 86.89%\n"
+     ]
+    }
+   ],
+   "source": [
+    "logistic_model = LogisticRegression() # instantiates the logistic regression model\n",
+    "\n",
+    "logistic_model.fit(X_train, y_train.values.ravel()) # fits the model to the training data\n",
+    "\n",
+    "predictions = logistic_model.predict(X_test) # predicts the target values for test\n",
+    "\n",
+    "conf_matrix = confusion_matrix(y_test, predictions) # calculates confusion matrix\n",
+    "print(\"Confusion Matrix: \\n\")\n",
+    "print(conf_matrix)\n",
+    "\n",
+    "test_accuracy = accuracy_score(y_test, predictions) * 100 # calculates test accuracy\n",
+    "print(f\"\\nLogistic Regression model accuracy: {test_accuracy:.2f}%\")"
    ]
   }
  ],
