added k-nn, code comments, and readability edits

--- a/Heart Attack Predictions - DT, LR, KNN.ipynb
+++ b/Heart Attack Predictions - DT, LR, KNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "84b75666",
+   "id": "2656ac47",
    "metadata": {},
    "source": [
     "# Finding the Best Algorithm to Predict Heart Attacks\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "323ec61b",
+   "id": "77e50be7",
    "metadata": {},
    "source": [
     "## Importing Libraries"
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4df02448",
+   "id": "ee4c4cdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3411c3e7",
+   "id": "d742bbcb",
    "metadata": {},
    "source": [
     "## Data Validation"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "4705513b",
+   "id": "83d928ef",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "bdd28a6e",
+   "id": "b82123df",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1470d6b2",
+   "id": "2d4673b5",
    "metadata": {},
    "source": [
     "Data Cleansing"
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "7fcec1d9",
+   "id": "d7e6fe8b",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "fbcbda9f",
+   "id": "4cfe76be",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1b120c7",
+   "id": "a687a96b",
    "metadata": {},
    "source": [
     "Creates training and testing splits"
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b973f957",
+   "id": "7ca13d3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,15 +745,53 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1138fa8",
+   "id": "600ee0e6",
    "metadata": {},
    "source": [
     "## Classifier Decision Tree"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "2e445288",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "[[19  9]\n",
+      " [ 4 29]]\n",
+      "\n",
+      "\n",
+      "The test accuracy score of the Decision Tree is: 78.69%\n"
+     ]
+    }
+   ],
+   "source": [
+    "decision_tree_classifier = DecisionTreeClassifier(random_state=42) # instantiates the dt classifier with 42 random state\n",
+    "\n",
+    "# Fit the model to the training data\n",
+    "decision_tree_classifier.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict on the test data\n",
+    "decision_tree_predictions = decision_tree_classifier.predict(X_test)\n",
+    "\n",
+    "# Generate and display the confusion matrix\n",
+    "decision_tree_confusion_matrix = confusion_matrix(y_test, decision_tree_predictions)\n",
+    "print(\"Confusion Matrix:\\n\")\n",
+    "print(decision_tree_confusion_matrix)\n",
+    "\n",
+    "# Calculate and print the test accuracy\n",
+    "decision_tree_test_accuracy = accuracy_score(y_test, decision_tree_predictions) # calculates the test a\n",
+    "print(f\"\\nThe test accuracy score of the Decision Tree is: {decision_tree_test_accuracy * 100:.2f}%\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "a5735a5a",
+   "id": "caf7d5de",
    "metadata": {},
    "source": [
     "## K-Nearest Neighbors Classifier"
@@ -762,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "b8666226",
+   "id": "2778bbc1",
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +849,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c20195c6",
+   "id": "82e61163",
    "metadata": {},
    "source": [
     "## Logistic Regression"
@@ -820,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "1496c302",
+   "id": "9eb9a06e",
    "metadata": {},
    "outputs": [
     {
