--- a/Heart Attack Predictions - DT, LR, KNN.ipynb
+++ b/Heart Attack Predictions - DT, LR, KNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2656ac47",
+   "id": "bc2c0aa8",
    "metadata": {},
    "source": [
     "# Finding the Best Algorithm to Predict Heart Attacks\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77e50be7",
+   "id": "179676b7",
    "metadata": {},
    "source": [
     "## Importing Libraries"
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ee4c4cdf",
+   "id": "76ccb389",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d742bbcb",
+   "id": "e729d945",
    "metadata": {},
    "source": [
     "## Data Validation"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "83d928ef",
+   "id": "f4032698",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "b82123df",
+   "id": "bbd9c1d7",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d4673b5",
+   "id": "1ff93d10",
    "metadata": {},
    "source": [
     "Data Cleansing"
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "d7e6fe8b",
+   "id": "e6fcf5b3",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "4cfe76be",
+   "id": "b6c81d4d",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a687a96b",
+   "id": "43d3328b",
    "metadata": {},
    "source": [
     "Creates training and testing splits"
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "7ca13d3a",
+   "id": "690006ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +745,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "600ee0e6",
+   "id": "fe8fe6e6",
+   "metadata": {},
+   "source": [
+    "# Comparing Accuracies: DT v LR v KNN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dfb7b53",
    "metadata": {},
    "source": [
     "## Classifier Decision Tree"
@@ -753,8 +761,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "2e445288",
+   "execution_count": 51,
+   "id": "91ee0426",
    "metadata": {},
    "outputs": [
     {
@@ -762,36 +770,32 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
+      "\n",
       "[[19  9]\n",
       " [ 4 29]]\n",
       "\n",
-      "\n",
-      "The test accuracy score of the Decision Tree is: 78.69%\n"
+      "Decision Tree Accuracy: 78.69%\n"
      ]
     }
    ],
    "source": [
     "decision_tree_classifier = DecisionTreeClassifier(random_state=42) # instantiates the dt classifier with 42 random state\n",
     "\n",
-    "# Fit the model to the training data\n",
-    "decision_tree_classifier.fit(X_train, y_train)\n",
+    "decision_tree_classifier.fit(X_train, y_train) # fits the model on the training data\n",
     "\n",
-    "# Predict on the test data\n",
-    "decision_tree_predictions = decision_tree_classifier.predict(X_test)\n",
+    "decision_tree_predictions = decision_tree_classifier.predict(X_test) # predicts the test data\n",
     "\n",
-    "# Generate and display the confusion matrix\n",
-    "decision_tree_confusion_matrix = confusion_matrix(y_test, decision_tree_predictions)\n",
+    "decision_tree_confusion_matrix = confusion_matrix(y_test, decision_tree_predictions) # generates the confusion matrix\n",
     "print(\"Confusion Matrix:\\n\")\n",
-    "print(decision_tree_confusion_matrix)\n",
+    "print(decision_tree_confusion_matrix) # displays the confusion matrix\n",
     "\n",
-    "# Calculate and print the test accuracy\n",
-    "decision_tree_test_accuracy = accuracy_score(y_test, decision_tree_predictions) # calculates the test a\n",
-    "print(f\"\\nThe test accuracy score of the Decision Tree is: {decision_tree_test_accuracy * 100:.2f}%\")"
+    "decision_tree_test_accuracy = accuracy_score(y_test, decision_tree_predictions) # calculates the test accuracy\n",
+    "print(f\"\\nDecision Tree Accuracy: {decision_tree_test_accuracy * 100:.2f}%\") # prints the test accuracy"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "caf7d5de",
+   "id": "1eb7a10c",
    "metadata": {},
    "source": [
     "## K-Nearest Neighbors Classifier"
@@ -799,8 +803,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "2778bbc1",
+   "execution_count": 50,
+   "id": "03bc7da1",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +816,7 @@
       "[[22  6]\n",
       " [ 6 27]]\n",
       "\n",
-      "The test accuracy of the K-Neighbors Classifier is: 80.33%\n",
+      "K-Neighbors Classifier Accuracy: 80.33%\n",
       "\n",
       "Classification Report: \n",
       "\n",
@@ -841,7 +845,7 @@
     "print(knn_confusion_matrix)\n",
     "\n",
     "knn_test_accuracy = accuracy_score(y_test, knn_predictions) * 100 # calculates the test accuracy\n",
-    "print(f\"\\nThe test accuracy of the K-Neighbors Classifier is: {knn_test_accuracy:.2f}%\\n\") # displays the test accuracy\n",
+    "print(f\"\\nK-Neighbors Classifier Accuracy: {knn_test_accuracy:.2f}%\\n\") # displays the test accuracy\n",
     "\n",
     "print(\"Classification Report: \\n\")\n",
     "print(classification_report(y_test, knn_predictions)) # prints the classification report for precision, recall, f1-score, and accuracy"
@@ -849,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82e61163",
+   "id": "7d5bc4c7",
    "metadata": {},
    "source": [
     "## Logistic Regression"
@@ -857,8 +861,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "9eb9a06e",
+   "execution_count": 48,
+   "id": "f99d8700",
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +874,7 @@
       "[[23  5]\n",
       " [ 3 30]]\n",
       "\n",
-      "Logistic Regression model accuracy: 86.89%\n"
+      "Logistic Regression Accuracy: 86.89%\n"
      ]
     }
    ],
@@ -886,8 +890,16 @@
     "print(conf_matrix)\n",
     "\n",
     "test_accuracy = accuracy_score(y_test, predictions) * 100 # calculates test accuracy\n",
-    "print(f\"\\nLogistic Regression model accuracy: {test_accuracy:.2f}%\")"
+    "print(f\"\\nLogistic Regression Accuracy: {test_accuracy:.2f}%\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5249aad4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
